--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,30 +2,22 @@ version: '3'
 services:
 
   web:
-    container_name: ${site}
-    hostname: ${site}
-    #image: 'nated.io/party-web:latest'
+    container_name: ${SITE_NAME}
+    hostname: ${SITE_NAME}
+    build:
+      context: .
+      dockerfile: party.dockerfile
     ports:
       - 8080:4545
     volumes:
       - party-web:/
     networks:
       - party
-  
-  redis:
-    container_name: ${redis}
-    hostname: ${redis}
-    #image: 'nated.io/party-redis:latest'
-    ports:
-      - 5432:5432
-    volumes:
-      - party-redis:/data
-    networks:
-      - party
+    environment:
+      - PASSWORD=${PASSWORD}
 
 networks:
   party:
 
 volumes:
   party-web:
-  party-redis:
